--- a/Woofriend/RIBs/SignUp/Cell/DogPhotoCollectionViewCell.xib
+++ b/Woofriend/RIBs/SignUp/Cell/DogPhotoCollectionViewCell.xib
@@ -4,21 +4,100 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DogPhotoCollectionViewCell" id="gTV-IL-0wX" customClass="DogPhotoCollectionViewCell" customModule="Woofriend" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DogPhotoCollectionViewCell" id="zhh-4k-GGL" customClass="DogPhotoCollectionViewCell" customModule="Woofriend" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="504"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="504"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H98-Tx-QrF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="504"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UKL-Ov-O2M">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="504"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_dog_profile" translatesAutoresizingMaskIntoConstraints="NO" id="Pm6-sg-oqr">
+                                        <rect key="frame" x="146.5" y="38" width="80" height="83"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="프로필 사진을 등록하세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ngX-ia-mRz">
+                                <rect key="frame" x="136" y="15" width="103" height="12"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="10"/>
+                                <color key="textColor" name="black_2"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사람들에게 보여줄 사진 최소 3장을 더 등록해주세요. 견주님과 함께 나온 사진을 등록하시면 더욱 좋습니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufC-OH-hi7">
+                                <rect key="frame" x="62.5" y="143" width="250.5" height="29"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="12"/>
+                                <color key="textColor" name="black_2"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8M9-s5-wNC">
+                                <rect key="frame" x="30" y="191" width="316" height="274"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TWm-T9-lBh">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                            </collectionView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="8M9-s5-wNC" firstAttribute="top" secondItem="ufC-OH-hi7" secondAttribute="bottom" constant="19" id="54h-Df-3zR"/>
+                            <constraint firstItem="UKL-Ov-O2M" firstAttribute="top" secondItem="H98-Tx-QrF" secondAttribute="top" id="J5v-V2-j74"/>
+                            <constraint firstItem="Pm6-sg-oqr" firstAttribute="centerX" secondItem="ngX-ia-mRz" secondAttribute="centerX" constant="-1" id="Jme-BN-uP8"/>
+                            <constraint firstItem="UKL-Ov-O2M" firstAttribute="centerX" secondItem="H98-Tx-QrF" secondAttribute="centerX" id="L9i-ou-cjN"/>
+                            <constraint firstItem="ngX-ia-mRz" firstAttribute="top" secondItem="bkz-MB-WsO" secondAttribute="top" constant="15" id="MJ2-uc-5Ph"/>
+                            <constraint firstItem="ufC-OH-hi7" firstAttribute="top" secondItem="Pm6-sg-oqr" secondAttribute="bottom" constant="22" id="O8Y-9M-spo"/>
+                            <constraint firstItem="bkz-MB-WsO" firstAttribute="bottom" secondItem="8M9-s5-wNC" secondAttribute="bottom" constant="39" id="QHi-PP-rY1"/>
+                            <constraint firstItem="Pm6-sg-oqr" firstAttribute="top" secondItem="ngX-ia-mRz" secondAttribute="bottom" constant="11" id="SX1-b7-Oag"/>
+                            <constraint firstItem="ufC-OH-hi7" firstAttribute="centerX" secondItem="ngX-ia-mRz" secondAttribute="centerX" id="aFq-Gd-7DF"/>
+                            <constraint firstItem="bkz-MB-WsO" firstAttribute="trailing" secondItem="8M9-s5-wNC" secondAttribute="trailing" constant="29" id="e1k-hW-A1C"/>
+                            <constraint firstAttribute="trailing" secondItem="UKL-Ov-O2M" secondAttribute="trailing" id="nMS-xL-duV"/>
+                            <constraint firstAttribute="bottom" secondItem="UKL-Ov-O2M" secondAttribute="bottom" id="o6Z-cY-6lf"/>
+                            <constraint firstItem="8M9-s5-wNC" firstAttribute="leading" secondItem="bkz-MB-WsO" secondAttribute="leading" constant="30" id="sv3-eH-qsk"/>
+                            <constraint firstItem="UKL-Ov-O2M" firstAttribute="bottom" secondItem="bkz-MB-WsO" secondAttribute="bottom" id="wbD-q5-ArL"/>
+                            <constraint firstItem="ngX-ia-mRz" firstAttribute="centerX" secondItem="UKL-Ov-O2M" secondAttribute="centerX" id="z4s-2e-nbg"/>
+                            <constraint firstItem="UKL-Ov-O2M" firstAttribute="leading" secondItem="H98-Tx-QrF" secondAttribute="leading" id="zEO-qm-QkA"/>
+                        </constraints>
+                        <viewLayoutGuide key="contentLayoutGuide" id="cov-X6-vAB"/>
+                        <viewLayoutGuide key="frameLayoutGuide" id="bkz-MB-WsO"/>
+                    </scrollView>
+                </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="100" y="102"/>
+            <viewLayoutGuide key="safeArea" id="kun-gU-pOI"/>
+            <constraints>
+                <constraint firstItem="H98-Tx-QrF" firstAttribute="top" secondItem="zhh-4k-GGL" secondAttribute="top" id="eF2-2h-gHQ"/>
+                <constraint firstItem="H98-Tx-QrF" firstAttribute="leading" secondItem="zhh-4k-GGL" secondAttribute="leading" id="qMh-pV-fcL"/>
+                <constraint firstAttribute="trailing" secondItem="H98-Tx-QrF" secondAttribute="trailing" id="qMm-lm-xUK"/>
+                <constraint firstAttribute="bottom" secondItem="H98-Tx-QrF" secondAttribute="bottom" id="uBD-qL-R0q"/>
+            </constraints>
+            <size key="customSize" width="276" height="422"/>
+            <connections>
+                <outlet property="collectionView" destination="8M9-s5-wNC" id="Uck-xX-mZ6"/>
+            </connections>
+            <point key="canvasLocation" x="239.85507246376812" y="139.28571428571428"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="img_dog_profile" width="80" height="83"/>
+        <namedColor name="black_2">
+            <color red="0.44699999690055847" green="0.44699999690055847" blue="0.44699999690055847" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
